--- a/index.html
+++ b/index.html
@@ -125,6 +125,40 @@
                     </div>
                 </div>
           </main>
+          <footer>
+                <div class="row align-items-start justify-content-center my-footer pt-5">
+                    <div class="col-3 text-center text-white">
+                        <h5>LOCATION</h5>
+                        <p class="fw-bold">2215 john Daniel Drive Clark, MO 54243</p>
+                    </div>
+                    <div class="col-3 text-center text-white">
+                        <h5>AROUND THE WEB</h5>
+                        <div class="row justify-content-center align-items-center pt-3">
+                            <div class="col-2">
+                                <i class="fa-brands fa-facebook-f"></i>
+                            </div>
+                            <div class="col-2">
+                                <i class="fa-brands fa-google-plus-g"></i>
+                            </div>
+                            <div class="col-2">
+                                <i class=" fa-brands fa-twitter"></i>
+                            </div>
+                            <div class="col-2">
+                                <i class=" fa-brands fa-linkedin-in"></i>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-3 text-center text-white">
+                        <h5>ABOUT FREELANCER</h5>
+                        <p>Freelance is a free to use, open source Bootstrap theme created by <span class="my-span">Start Bootstrap</span></p>
+                    </div>
+                </div>
+                <div class="row my-footer-2 justify-content-center align-items-center">
+                    <div class="col-12 d-flex justify-content-center align-items-center text-white py-4">
+                        <span>Copyright © Your Website 2019</span>
+                    </div>
+                </div>
+          </footer>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 </body>
