--- a/index.html
+++ b/index.html
@@ -20,146 +20,142 @@
 
 </head>
 <body>
-    <div class="container-fluid px-0" data-bs-theme="dark">
-        <nav class="navbar navbar-expand-sm my-nav">
-            <div class="container-fluid w-75">
-              <a class="navbar-brand" href="#">START BOOTSTRAP</a>
-              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-              </button>
-              <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
-                    <ul class="navbar-nav">
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">PORTFOLIO</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">ABOUT</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">CONTACT</a>
-                        </li>
-                    </ul>
-              </div>
+    <nav class="navbar navbar-expand-sm my-nav" data-bs-theme="dark">
+        <div class="container-fluid w-75">
+            <a class="navbar-brand" href="#">START BOOTSTRAP</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">PORTFOLIO</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">ABOUT</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">CONTACT</a>
+                    </li>
+                </ul>
             </div>
-          </nav>
-          <header class="my-header" data-bs-theme="dark">
-                <div class="row justify-content-center mx-0 pt-5">
-                    <div class="col-2">
-                        <img class="img-fluid" src="img/avatar.svg" alt="#">
+        </div>
+    </nav>
+    <header class="my-header" data-bs-theme="dark">
+        <div class="row justify-content-center mx-0 pt-5">
+            <div class="col-6 col-md-4 col-lg-3">
+                <img class="img-fluid" src="img/avatar.svg" alt="#">
+            </div>
+        </div>
+        <div class="row justify-content-center mx-0 mt-3 pb-5">
+            <div class="col-12 text-center text-white">
+                <h1 class="fs-1 fw-bold">START BOOTSTRAP</h1>
+                <div class="d-flex justify-content-center align-items-center gap-3 my-2">
+                    <hr class="hr-light">
+                    <i class="fa-solid fa-star fs-4"></i>
+                    <hr class="hr-light">
+                </div>
+                <strong class="fs-6">GRAPHIC ARTIST - WEB DESIGNER - ILLUSTRATOR</strong>
+            </div>
+        </div>
+    </header>
+    <main class="container-fluid">
+        <div class="row justify-content-center mt-5">
+            <div class="col-6 text-center text-dark">
+                <h2>PORTFOLIO</h2>
+                <div class="d-flex justify-content-center align-items-center gap-3 my-2">
+                    <hr class="hr-dark">
+                    <i class="fa-solid fa-star fs-4"></i>
+                    <hr class="hr-dark">
+                </div>
+            </div>
+        </div>
+        <div class="row justify-content-center">
+            <div class="col-12">
+                <div class="row justify-content-center gap-3 mb-5 mt-3">
+                    <div class="col-12 col-md-4 col-lg-3">
+                        <img class="img-fluid rounded" src="img/cabin.png" alt="">
+                    </div>
+                    <div class="col-12 col-md-4 col-lg-3">
+                        <img class="img-fluid rounded" src="img/cake.png" alt="">
+                    </div>
+                    <div class="col-12 col-md-4 col-lg-3">
+                        <img class="img-fluid rounded" src="img/circus.png" alt="">
+                    </div>
+                    <div class="col-12 col-md-4 col-lg-3">
+                        <img class="img-fluid rounded" src="img/game.png" alt="">
+                    </div>
+                    <div class="col-12 col-md-4 col-lg-3">
+                        <img class="img-fluid rounded" src="img/safe.png" alt="">
+                    </div>
+                    <div class="col-12 col-md-4 col-lg-3">
+                        <img class="img-fluid rounded" src="img/submarine.png" alt="">
                     </div>
                 </div>
-                <div class="row justify-content-center mx-0 mt-3 pb-5">
-                    <div class="col-6 text-center text-white">
-                        <h1 class="fs-1 fw-bold">START BOOTSTRAP</h1>
-                        <div class="d-flex justify-content-center align-items-center gap-3 my-2">
-                            <hr class="hr-light">
-                            <i class="fa-solid fa-star fs-4"></i>
-                            <hr class="hr-light">
-                        </div>
-                        <strong class="fs-6">GRAPHIC ARTIST - WEB DESIGNER - ILLUSTRATOR</strong>
-                    </div>
+            </div>
+        </div>
+    </main>
+    <div class="my-about container-fluid">
+        <div class="row justify-content-center align-items-center pt-5">
+            <div class="col-6 text-center text-white">
+                <h2>ABOUT</h2>
+                <div class="d-flex justify-content-center align-items-center gap-3 my-3">
+                    <hr class="hr-light">
+                    <i class="fa-solid fa-star fs-4"></i>
+                    <hr class="hr-light">
                 </div>
-          </header>
-          <main>
-                <div class="row justify-content-center mt-5">
-                    <div class="col-6 text-center text-dark">
-                        <h2>PORTFOLIO</h2>
-                        <div class="d-flex justify-content-center align-items-center gap-3 my-2">
-                            <hr class="hr-dark">
-                            <i class="fa-solid fa-star fs-4"></i>
-                            <hr class="hr-dark">
-                        </div>
-                    </div>
+            </div>
+        </div>
+        <div class="row justify-content-center align-items-center pb-4">
+            <div class="row justify-content-center">
+                <div class="col-8 col-md-4 text-white">
+                    <p>Freelancer is a free bootstrap theme created by Start Bootstrap. The download includes the complete sorce files including HTML, CSS, and JavaScript as well as optional LESS stylesheet for esey customization.</p>
                 </div>
-                <div class="row justify-content-center mx-0">
-                    <div class="col-8 w-75">
-                        <div class="row justify-content-center mx-0">
-                            <div class="col-4">
-                                <img class="img-fluid rounded" src="img/cabin.png" alt="">
-                            </div>
-                            <div class="col-4">
-                                <img class="img-fluid rounded" src="img/cake.png" alt="">
-                            </div>
-                            <div class="col-4">
-                                <img class="img-fluid rounded" src="img/circus.png" alt="">
-                            </div>
-                        </div>
-                        <div class="row justify-content-center mt-4 mb-5 mx-0">
-                            <div class="col-4">
-                                <img class="img-fluid rounded" src="img/game.png" alt="">
-                            </div>
-                            <div class="col-4">
-                                <img class="img-fluid rounded" src="img/safe.png" alt="">
-                            </div>
-                            <div class="col-4">
-                                <img class="img-fluid rounded" src="img/submarine.png" alt="">
-                            </div>
-                        </div>
-                    </div>
+                <div class="col-8 col-md-4 text-white">
+                    <p>Whether you're a student looking to showcase your work, a professional looking to attract clients, or a graphic artist looking to share your project, this template is the perfect starting point</p>
                 </div>
-                <div class="my-about">
-                    <div class="row justify-content-center align-items-center pt-5">
-                        <div class="col-6 text-center text-white">
-                            <h2>ABOUT</h2>
-                            <div class="d-flex justify-content-center align-items-center gap-3 my-3">
-                                <hr class="hr-light">
-                                <i class="fa-solid fa-star fs-4"></i>
-                                <hr class="hr-light">
-                            </div>
-                        </div>
-                    </div>
-                    <div class="row justify-content-center align-items-center pb-4">
-                        <div class="row justify-content-center">
-                            <div class="col-4 text-white">
-                                <p>Freelancer is a free bootstrap theme created by Start Bootstrap. The download includes the complete sorce files including HTML, CSS, and JavaScript as well as optional LESS stylesheet for esey customization.</p>
-                            </div>
-                            <div class="col-4 text-white">
-                                <p>Whether you're a student looking to showcase your work, a professional looking to attract clients, or a graphic artist looking to share your project, this template is the perfect starting point</p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="row align-items-center justify-content-center pb-5">
-                        <div class="col-2 d-flex justify-content-center">
-                            <button type="button" class="btn btn-outline-light"><i class="fa-solid fa-download"></i> Download</button>
-                        </div>
-                    </div>
-                </div>
-          </main>
-          <footer>
-                <div class="row align-items-start justify-content-center my-footer pt-5">
-                    <div class="col-3 text-center text-white">
-                        <h5>LOCATION</h5>
-                        <p class="fw-bold">2215 john Daniel Drive Clark, MO 54243</p>
-                    </div>
-                    <div class="col-3 text-center text-white">
-                        <h5>AROUND THE WEB</h5>
-                        <div class="row justify-content-center align-items-center pt-3">
-                            <div class="col-2">
-                                <i class="fa-brands fa-facebook-f"></i>
-                            </div>
-                            <div class="col-2">
-                                <i class="fa-brands fa-google-plus-g"></i>
-                            </div>
-                            <div class="col-2">
-                                <i class=" fa-brands fa-twitter"></i>
-                            </div>
-                            <div class="col-2">
-                                <i class=" fa-brands fa-linkedin-in"></i>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-3 text-center text-white">
-                        <h5>ABOUT FREELANCER</h5>
-                        <p>Freelance is a free to use, open source Bootstrap theme created by <span class="my-span">Start Bootstrap</span></p>
-                    </div>
-                </div>
-                <div class="row my-footer-2 justify-content-center align-items-center">
-                    <div class="col-12 d-flex justify-content-center align-items-center text-white py-4">
-                        <span>Copyright © Your Website 2019</span>
-                    </div>
-                </div>
-          </footer>
+            </div>
+        </div>
+        <div class="row align-items-center justify-content-center pb-5">
+            <div class="col-2 d-flex justify-content-center">
+                <button type="button" class="btn btn-outline-light"><i class="fa-solid fa-download"></i> Download</button>
+            </div>
+        </div>
     </div>
+    <footer class="container-fluid">
+        <div class="row align-items-start justify-content-center my-footer gap-4  pt-5 pb-5">
+            <div class="col-12 col-md-3 text-center text-white">
+                <h5>LOCATION</h5>
+                <p class="fw-bold">2215 john Daniel Drive Clark, MO 54243</p>
+            </div>
+            <div class="col-12 col-md-3 text-center text-white">
+                <h5>AROUND THE WEB</h5>
+                <div class="row justify-content-center align-items-center gap-3 pt-2">
+                    <div class="col-1 d-flex justify-content-center">
+                        <i class="fa-brands fa-facebook-f"></i>
+                    </div>
+                    <div class="col-1 d-flex justify-content-center">
+                        <i class="fa-brands fa-google-plus-g"></i>
+                    </div>
+                    <div class="col-1 d-flex justify-content-center">
+                        <i class=" fa-brands fa-twitter"></i>
+                    </div>
+                    <div class="col-1 d-flex justify-content-center">
+                        <i class=" fa-brands fa-linkedin-in"></i>
+                    </div>
+                </div>
+            </div>
+            <div class="col-12 col-md-3 text-center text-white">
+                <h5>ABOUT FREELANCER</h5>
+                <p>Freelance is a free to use, open source Bootstrap theme created by <span class="my-span">Start Bootstrap</span></p>
+            </div>
+        </div>
+        <div class="row my-footer-2 justify-content-center align-items-center">
+            <div class="col-12 d-flex justify-content-center align-items-center text-white py-4">
+                <span>Copyright © Your Website 2019</span>
+            </div>
+        </div>
+    </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 </body>
 </html>
