--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 </head>
 <body>
     <nav class="navbar navbar-expand-sm my-nav" data-bs-theme="dark">
-        <div class="container-fluid w-75">
+        <div class="container">
             <a class="navbar-brand" href="#">START BOOTSTRAP</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -41,7 +41,7 @@
             </div>
         </div>
     </nav>
-    <header class="my-header" data-bs-theme="dark">
+    <header class="my-header container-fluid" data-bs-theme="dark">
         <div class="row justify-content-center mx-0 pt-5">
             <div class="col-6 col-md-4 col-lg-3">
                 <img class="img-fluid" src="img/avatar.svg" alt="#">
