--- a/index.html
+++ b/index.html
@@ -20,6 +20,19 @@
 
 </head>
 <body>
+
+<!--  .-----------------. .----------------.  .----------------. 
+| .--------------. || .--------------. || .--------------. |
+| | ____  _____  | || |      __      | || | ____   ____  | |
+| ||_   \|_   _| | || |     /  \     | || ||_  _| |_  _| | |
+| |  |   \ | |   | || |    / /\ \    | || |  \ \   / /   | |
+| |  | |\ \| |   | || |   / ____ \   | || |   \ \ / /    | |
+| | _| |_\   |_  | || | _/ /    \ \_ | || |    \ ' /     | |
+| ||_____|\____| | || ||____|  |____|| || |     \_/      | |
+| |              | || |              | || |              | |
+| '--------------' || '--------------' || '--------------' |
+ '----------------'  '----------------'  '----------------'  -->
+
     <nav class="navbar navbar-expand-sm my-nav" data-bs-theme="dark">
         <div class="container">
             <a class="navbar-brand" href="#">START BOOTSTRAP</a>
@@ -41,6 +54,19 @@
             </div>
         </div>
     </nav>
+
+<!--  .----------------.  .----------------.  .----------------.  .----------------.  .----------------.  .----------------. 
+| .--------------. || .--------------. || .--------------. || .--------------. || .--------------. || .--------------. |
+| |  ____  ____  | || |  _________   | || |      __      | || |  ________    | || |  _________   | || |  _______     | |
+| | |_   ||   _| | || | |_   ___  |  | || |     /  \     | || | |_   ___ `.  | || | |_   ___  |  | || | |_   __ \    | |
+| |   | |__| |   | || |   | |_  \_|  | || |    / /\ \    | || |   | |   `. \ | || |   | |_  \_|  | || |   | |__) |   | |
+| |   |  __  |   | || |   |  _|  _   | || |   / ____ \   | || |   | |    | | | || |   |  _|  _   | || |   |  __ /    | |
+| |  _| |  | |_  | || |  _| |___/ |  | || | _/ /    \ \_ | || |  _| |___.' / | || |  _| |___/ |  | || |  _| |  \ \_  | |
+| | |____||____| | || | |_________|  | || ||____|  |____|| || | |________.'  | || | |_________|  | || | |____| |___| | |
+| |              | || |              | || |              | || |              | || |              | || |              | |
+| '--------------' || '--------------' || '--------------' || '--------------' || '--------------' || '--------------' |
+ '----------------'  '----------------'  '----------------'  '----------------'  '----------------'  '----------------'  -->
+
     <header class="my-header container-fluid" data-bs-theme="dark">
         <div class="row justify-content-center mx-0 pt-5">
             <div class="col-6 col-md-4 col-lg-3">
@@ -59,6 +85,19 @@
             </div>
         </div>
     </header>
+
+<!--  .----------------.  .----------------.  .----------------.  .-----------------.
+| .--------------. || .--------------. || .--------------. || .--------------. |
+| | ____    ____ | || |      __      | || |     _____    | || | ____  _____  | |
+| ||_   \  /   _|| || |     /  \     | || |    |_   _|   | || ||_   \|_   _| | |
+| |  |   \/   |  | || |    / /\ \    | || |      | |     | || |  |   \ | |   | |
+| |  | |\  /| |  | || |   / ____ \   | || |      | |     | || |  | |\ \| |   | |
+| | _| |_\/_| |_ | || | _/ /    \ \_ | || |     _| |_    | || | _| |_\   |_  | |
+| ||_____||_____|| || ||____|  |____|| || |    |_____|   | || ||_____|\____| | |
+| |              | || |              | || |              | || |              | |
+| '--------------' || '--------------' || '--------------' || '--------------' |
+ '----------------'  '----------------'  '----------------'  '----------------'  -->
+
     <main class="container-fluid">
         <div class="row justify-content-center mt-5">
             <div class="col-6 text-center text-dark">
@@ -95,6 +134,19 @@
             </div>
         </div>
     </main>
+
+<!--  .----------------.  .----------------.  .----------------.  .----------------.  .----------------. 
+| .--------------. || .--------------. || .--------------. || .--------------. || .--------------. |
+| |      __      | || |   ______     | || |     ____     | || | _____  _____ | || |  _________   | |
+| |     /  \     | || |  |_   _ \    | || |   .'    `.   | || ||_   _||_   _|| || | |  _   _  |  | |
+| |    / /\ \    | || |    | |_) |   | || |  /  .--.  \  | || |  | |    | |  | || | |_/ | | \_|  | |
+| |   / ____ \   | || |    |  __'.   | || |  | |    | |  | || |  | '    ' |  | || |     | |      | |
+| | _/ /    \ \_ | || |   _| |__) |  | || |  \  `--'  /  | || |   \ `--' /   | || |    _| |_     | |
+| ||____|  |____|| || |  |_______/   | || |   `.____.'   | || |    `.__.'    | || |   |_____|    | |
+| |              | || |              | || |              | || |              | || |              | |
+| '--------------' || '--------------' || '--------------' || '--------------' || '--------------' |
+ '----------------'  '----------------'  '----------------'  '----------------'  '----------------'  -->
+
     <div class="my-about container-fluid">
         <div class="row justify-content-center align-items-center pt-5">
             <div class="col-6 text-center text-white">
@@ -122,6 +174,65 @@
             </div>
         </div>
     </div>
+
+<!--  .----------------.  .----------------.  .-----------------. .----------------.  .----------------.  .----------------.  .----------------.  .----------------.  .----------------.  .----------------. 
+| .--------------. || .--------------. || .--------------. || .--------------. || .--------------. || .--------------. || .--------------. || .--------------. || .--------------. || .--------------. |
+| |     ______   | || |     ____     | || | ____  _____  | || |  _________   | || |      __      | || |     ______   | || |  _________   | || |              | || | ____    ____ | || |  _________   | |
+| |   .' ___  |  | || |   .'    `.   | || ||_   \|_   _| | || | |  _   _  |  | || |     /  \     | || |   .' ___  |  | || | |  _   _  |  | || |              | || ||_   \  /   _|| || | |_   ___  |  | |
+| |  / .'   \_|  | || |  /  .--.  \  | || |  |   \ | |   | || | |_/ | | \_|  | || |    / /\ \    | || |  / .'   \_|  | || | |_/ | | \_|  | || |    ______    | || |  |   \/   |  | || |   | |_  \_|  | |
+| |  | |         | || |  | |    | |  | || |  | |\ \| |   | || |     | |      | || |   / ____ \   | || |  | |         | || |     | |      | || |   |______|   | || |  | |\  /| |  | || |   |  _|  _   | |
+| |  \ `.___.'\  | || |  \  `--'  /  | || | _| |_\   |_  | || |    _| |_     | || | _/ /    \ \_ | || |  \ `.___.'\  | || |    _| |_     | || |              | || | _| |_\/_| |_ | || |  _| |___/ |  | |
+| |   `._____.'  | || |   `.____.'   | || ||_____|\____| | || |   |_____|    | || ||____|  |____|| || |   `._____.'  | || |   |_____|    | || |              | || ||_____||_____|| || | |_________|  | |
+| |              | || |              | || |              | || |              | || |              | || |              | || |              | || |              | || |              | || |              | |
+| '--------------' || '--------------' || '--------------' || '--------------' || '--------------' || '--------------' || '--------------' || '--------------' || '--------------' || '--------------' |
+ '----------------'  '----------------'  '----------------'  '----------------'  '----------------'  '----------------'  '----------------'  '----------------'  '----------------'  '----------------'  -->
+
+    <div class="contact-me container d-flex justify-content-center py-5">
+        <div class="col-9">
+            <div class="row justify-content-center mt-5 mb-5">
+                <div class="col-6 text-center text-dark">
+                    <h2>CONTACT ME</h2>
+                    <div class="d-flex justify-content-center align-items-center gap-3 my-2">
+                        <hr class="hr-dark">
+                        <i class="fa-solid fa-star fs-4"></i>
+                        <hr class="hr-dark">
+                    </div>
+                </div>
+            </div>
+            <div class="form-floating  mb-3">
+                <input type="text" class="form-control border-0 border-bottom rounded-0 shadow-none " id="exampleFormControlInput1" placeholder="Name">
+                <label for="floatingInput">Name</label>
+            </div>
+            <div class="form-floating mb-3">
+                <input type="email" class="form-control border-0 border-bottom rounded-0 shadow-none " id="exampleFormControlInput1" placeholder="Email Address">
+                <label for="floatingInput">Email Address</label>
+            </div>
+            <div class="form-floating mb-3">
+                <input type="number" class="form-control border-0 border-bottom rounded-0 shadow-none " id="exampleFormControlInput1" placeholder="Phone Number">
+                <label for="floatingInput">Phone Number</label>
+            </div>
+            <div class="form-floating mb-3">
+                <textarea class="form-control border-0  border-bottom  rounded-0  shadow-none " placeholder="Leave a comment here" id="floatingTextarea2" style="height: 150px"></textarea>
+                <label for="floatingTextarea2">Message</label>
+              </div>
+            <button type="submit" class="btn btn-primary my-btn">Send</button>              
+        </div>
+    </div>
+
+
+
+<!--  .----------------.  .----------------.  .----------------.  .----------------.  .----------------.  .----------------.   
+ | .--------------. || .--------------. || .--------------. || .--------------. || .--------------. || .--------------. |  
+ | |  _________   | || |     ____     | || |     ____     | || |  _________   | || |  _________   | || |  _______     | |  
+ | | |_   ___  |  | || |   .'    `.   | || |   .'    `.   | || | |  _   _  |  | || | |_   ___  |  | || | |_   __ \    | |  
+ | |   | |_  \_|  | || |  /  .--.  \  | || |  /  .--.  \  | || | |_/ | | \_|  | || |   | |_  \_|  | || |   | |__) |   | |  
+ | |   |  _|      | || |  | |    | |  | || |  | |    | |  | || |     | |      | || |   |  _|  _   | || |   |  __ /    | |  
+ | |  _| |_       | || |  \  `--'  /  | || |  \  `--'  /  | || |    _| |_     | || |  _| |___/ |  | || |  _| |  \ \_  | |  
+ | | |_____|      | || |   `.____.'   | || |   `.____.'   | || |   |_____|    | || | |_________|  | || | |____| |___| | |  
+ | |              | || |              | || |              | || |              | || |              | || |              | |  
+ | '--------------' || '--------------' || '--------------' || '--------------' || '--------------' || '--------------' |  
+  '----------------'  '----------------'  '----------------'  '----------------'  '----------------'  '----------------'   -->
+
     <footer class="container-fluid">
         <div class="row align-items-start justify-content-center my-footer gap-4  pt-5 pb-5">
             <div class="col-12 col-md-3 text-center text-white">
